--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Zain Bux",
   "license": "MIT",
   "engines": {
-    "node": "14.16.0"
+    "node": ">=14.20.1"
   },
   "dependencies": {
     "colors": "^1.4.0",
